Use a MudCheckBox for the seven day/five day week switch

--- a/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
@@ -14,8 +14,7 @@
 <div>
     <div style="display: flex; justify-content: end; align-items: center; width: 100%;">
         <MudButton HRef="@ReportLink">Show report</MudButton>
-        <input type="checkbox" @bind="FiveDayWeek" style="width: 30px; padding: 2px" id="fivedayweek"/>
-        <label for="fivedayweek" style="padding-right: 5px">Five day week</label>
+        <MudCheckBox @bind-Checked="FiveDayWeek" Label="Five day week" Color="Color.Primary"/>
     </div>
 
     <div class="flex-row d-flex" style="width: 100%">
