--- a/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
@@ -145,7 +145,7 @@
         var d = _dialogService.Show<TimeActivityEditor>(dialogTitle, parameters, options);
         var result = await d.Result;
 
-        if (!result.Cancelled)
+        if (!result.Cancelled && (bool)result.Data)
         {
             await _persistence.Save(activity);
             await AssignActivity(activity);
