Try with a plain <a>

--- a/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
@@ -14,6 +14,7 @@
 
 <div>
     <div style="display: flex; justify-content: end; align-items: center; width: 100%;">
+        <a href="@ReportLink">Show report with a</a>
         <MudButton Href="@ReportLink">Show report</MudButton>
         <MudCheckBox @bind-Checked="FiveDayWeek" Label="Five day week" Color="Color.Primary"/>
     </div>
