Fix stupid NRE that prevented new entries from being added

--- a/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
@@ -102,7 +102,8 @@
         if (Entry != null && Day != null)
         {
             var existingActivity = Day.Entries
-                .Select(e => e.Activity)
+                .Where(e => e.Activity != null)
+                .Select(e => e.Activity!)
                 .FirstOrDefault(a => a.Id == activity.Id);
             var toAssign = existingActivity ?? activity;
             await AssignActivity(toAssign);
