--- a/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
@@ -111,6 +111,7 @@
                 .Select(e => e.Activity!)
                 .FirstOrDefault(a => a.Id == activity.Id);
             var toAssign = existingActivity ?? activity;
+            toAssign.LastUsed = DateTime.Now;
             await AssignActivity(toAssign);
         }
     }
