--- a/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
@@ -26,12 +26,12 @@
                     </div>
 
                     <MudMenuItem Class="ma-0 pa-0 ml-1 pl-1" OnClick="New">
-                        <div style="font-weight: bold">[New...]</div>
+                        <div style="font-weight: bold">New...</div>
                     </MudMenuItem>
                     @if (Entry.Activity != null)
                     {
                         <MudMenuItem Class="ma-0 pa-0 ml-1 pl-1" OnClick="Edit">
-                            <div style="font-weight: bold">[Edit '@Entry.Activity.Name'...]</div></MudMenuItem>
+                            <div style="font-weight: bold">Edit '@Entry.Activity.Name'...</div></MudMenuItem>
                     }
                     @foreach (var activity in _filteredActivities!.Take(6))
                     {
