Clean up more nullability warnings

--- a/src/TimeyWimey/TimeRegistration/TimeActivityEditor.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeActivityEditor.razor
@@ -118,7 +118,7 @@
 
     private void AddTimeCode()
     {
-        _timeCodeEditModels.Add(new TimeCodeEditModel());
+        _timeCodeEditModels!.Add(new TimeCodeEditModel());
     }
 
     private void SetTimeCodeSystemValue(TimeCodeSystem timeCodeSystem, TimeCodeEditModel model)
