--- a/src/TimeyWimey/TimeRegistration/DayDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/DayDisplay.razor
@@ -66,7 +66,7 @@
 
 
     public ElementReference SvgElement { get; set; }
-    private MouseEventArgs _currentMouseEventArgs;
+    private MouseEventArgs? _currentMouseEventArgs;
 
 
     private IEnumerable<(TimeOnly time, double y, double height, int index)> EnumerateDay(int chunks)
