Get rid of the brackets around Show All too.

--- a/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
@@ -42,7 +42,7 @@
                         </MudMenuItem>
                     }
                     <MudMenuItem Class="ma-0 pa-0 ml-1 pl-1" OnClick="ShowAll">
-                        <div style="font-weight: bold">[Show All...]</div></MudMenuItem>
+                        <div style="font-weight: bold">Show All...</div></MudMenuItem>
                     <MudIconButton Icon="@Icons.Material.Filled.Delete" Color="Color.Secondary" OnClick="async () => await DeleteEntry(Entry!)"/>
                 </div>
                 <div class="d-flex flex-column">
