--- a/src/TimeyWimey/Shared/NavMenu.razor
+++ b/src/TimeyWimey/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ImportReadExportModel">
+                <span class="oi oi-cloud-download" aria-hidden="true"></span> Import/ReadExportModel
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Debug">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Debug
             </NavLink>
