--- a/src/TimeyWimey/ImportExport/Export.razor
+++ b/src/TimeyWimey/ImportExport/Export.razor
@@ -6,7 +6,7 @@
 @inject ILogger<Export> _logger;
 @inject IJSRuntime _js;
 
-<MudButton Variant="Variant.Filled" OnClick="DoExport">ReadExportModel</MudButton>
+<MudButton Variant="Variant.Filled" OnClick="DoExport">Export</MudButton>
 @code {
 
     private async Task DoExport()
