--- a/src/TimeyWimey/ImportExport/ImportExport.razor
+++ b/src/TimeyWimey/ImportExport/ImportExport.razor
@@ -1,6 +1,6 @@
 ﻿@page "/ImportExport"
 
-<div class="d-flex" style="justify-content: flex-start; gap: 2em">
+<div class="d-flex flex-column" style="justify-content: flex-start; gap: 2em; align-items: center">
     <Import/>
     <Export/>
 </div>
