--- a/src/TimeyWimey/Shared/NavMenu.razor
+++ b/src/TimeyWimey/Shared/NavMenu.razor
@@ -20,8 +20,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ImportReadExportModel">
-                <span class="oi oi-cloud-download" aria-hidden="true"></span> Import/ReadExportModel
+            <NavLink class="nav-link" href="ImportExport">
+                <span class="oi oi-cloud-download" aria-hidden="true"></span> Import/Export
             </NavLink>
         </div>
         <div class="nav-item px-3">
